--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "gemini-imageGen",
+  "name": "gemini-image-editor",
   "private": true,
   "type": "module",
   "scripts": {
     "dev": "vite --port 3000",
     "start": "vite --port 3000",
-    "build": "vite build && tsc",
+    "build": "vite build",
     "serve": "vite preview",
     "test": "vitest run"
   },
