--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "vite --port 3000",
     "start": "vite --port 3000",
-    "build": "vite build",
+    "build": "bun install && vite build",
     "serve": "vite preview",
     "test": "vitest run"
   },
