init shopify connection and repo cleanup

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fontsource/inter": "^5.2.5",
     "@google/genai": "^0.13.0",
     "@kobalte/core": "^0.13.9",
+    "@shopify/storefront-api-client": "^1.0.7",
     "@tailwindcss/vite": "^4.1.5",
     "@tanstack/router-plugin": "^1.120.2",
     "@tanstack/solid-query": "^5.75.5",
