--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gemini-image-editor",
+  "name": "skeumorph-icongen",
   "private": true,
   "type": "module",
   "scripts": {
@@ -23,7 +23,7 @@
     "hono": "^4.7.8",
     "solid-js": "^1.9.6",
     "solid-transition-group": "^0.3.0",
-    "tailwind-merge": "^3.2.0",
+    "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.5",
     "tailwindcss-animate": "^1.0.7"
   },
