--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fontsource/inter": "^5.2.5",
+    "@google/genai": "^0.13.0",
     "@kobalte/core": "^0.13.9",
     "@tailwindcss/vite": "^4.1.5",
     "@tanstack/router-plugin": "^1.120.2",
